<resources>
    <string name="app_name">GeoFun</string>
    <string name="appTitle">GeoFun</string>
    <string name="description">Die Rätsel App</string>
    <string name="mode_1">Infinite Mode</string>
    <string name="mode_2">Time Rush</string>
    <string name="mode_3">Interactive Mode</string>
    <string name="settings">Einstellungen</string>
    <string name="infiniteLabel">Infinite Mode</string>
    <string name="placeholderQ">Frage</string>
    <string name="placeholderA">Antwort</string>
    <string name="currentScore">Aktueller Score</string>
    <string name="highScore">Highscore</string>
    <string name="placeHolderCS">2</string>
    <string name="placeholderHS">10</string>
    <string name="timeRushLabel">Time Rush</string>
    <string name="time">Zeit verbleibend</string>
    <string name="placeHolderTime">20</string>
    <string name="locationDetection">Standorterkennung</string>
    <string name="notifications">Benachrichtigungen</string>
    <string name="back">Zurück</string>
    <string name="widgetDescription">GeoFun: Lust zu spielen?</string>
    <string name="buttonDescription">Go!</string>
    <string name="title_activity_maps">Map</string>
    <string name="interactiveDescription">Benutze die Karte um Fragen zu beantworten</string>
    <string name="interactiveQuestionPlaceholder">Hauptstadt Deutschland</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>

</resources>
