<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/timeRushLabel"
        android:layout_width="408dp"
        android:layout_height="38dp"
        android:layout_marginStart="2dp"
        android:layout_marginEnd="2dp"
        android:gravity="center"
        android:text="@string/timeRushLabel"
        android:textColor="@color/colorPrimary"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/question"
        android:layout_width="383dp"
        android:layout_height="126dp"
        android:layout_marginStart="13dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="13dp"
        android:gravity="center"
        android:text="@string/placeholderQ"
        android:textColor="@color/colorAccent"
        android:textSize="30dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/time" />

    <TextView
        android:id="@+id/currentScore"
        android:layout_width="103dp"
        android:layout_height="53dp"
        android:layout_marginStart="16dp"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:text="@string/currentScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <TextView
        android:id="@+id/highScore"
        android:layout_width="103dp"
        android:layout_height="53dp"
        android:layout_marginEnd="1dp"
        android:layout_marginBottom="21dp"
        android:gravity="center"
        android:text="@string/highScore"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/highScoreValue" />

    <TextView
        android:id="@+id/currentScoreValue"
        android:layout_width="63dp"
        android:layout_height="53dp"
        android:layout_marginBottom="21dp"
        android:text="@string/placeHolderCS"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@+id/currentScore" />

    <TextView
        android:id="@+id/highScoreValue"
        android:layout_width="63dp"
        android:layout_height="53dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="21dp"
        android:text="@string/placeholderHS"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <Button
        android:id="@+id/answer1"
        android:layout_width="171dp"
        android:layout_height="90dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="39dp"
        android:text="@string/placeholderA"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toStartOf="@+id/answer2"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <Button
        android:id="@+id/answer3"
        android:layout_width="171dp"
        android:layout_height="90dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="34dp"
        android:layout_marginBottom="38dp"
        android:text="@string/placeholderA"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/currentScore"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer1" />

    <Button
        android:id="@+id/answer4"
        android:layout_width="171dp"
        android:layout_height="90dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="38dp"
        android:text="@string/placeholderA"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintBottom_toTopOf="@+id/highScore"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/answer2" />

    <Button
        android:id="@+id/answer2"
        android:layout_width="171dp"
        android:layout_height="90dp"
        android:layout_marginTop="46dp"
        android:layout_marginEnd="14dp"
        android:text="@string/placeholderA"
        android:textColor="@color/colorPrimaryDark"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/question" />

    <TextView
        android:id="@+id/time"
        android:layout_width="89dp"
        android:layout_height="45dp"
        android:layout_marginStart="254dp"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="12dp"
        android:text="@string/time"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeRushLabel" />

    <TextView
        android:id="@+id/timeValue"
        android:layout_width="57dp"
        android:layout_height="42dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="11dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:text="@string/placeHolderTime"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeRushLabel" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/timeRushBackButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="14dp"
        android:layout_marginTop="1dp"
        android:layout_marginEnd="184dp"
        android:layout_marginBottom="10dp"
        android:clickable="true"
        app:layout_constraintBottom_toTopOf="@+id/question"
        app:layout_constraintEnd_toStartOf="@+id/time"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeRushLabel"
        app:srcCompat="@drawable/abc_vector_test" />

</androidx.constraintlayout.widget.ConstraintLayout>