<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Switch
        android:id="@+id/locationSwitch"
        android:layout_width="384dp"
        android:layout_height="121dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="98dp"
        android:layout_marginEnd="14dp"
        android:text="@string/locationDetection"
        android:textSize="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Switch
        android:id="@+id/notificationSwitch"
        android:layout_width="384dp"
        android:layout_height="121dp"
        android:layout_marginStart="14dp"
        android:layout_marginTop="55dp"
        android:layout_marginEnd="14dp"
        android:layout_marginBottom="50dp"
        android:text="@string/notifications"
        android:textSize="20dp"
        app:layout_constraintBottom_toTopOf="@+id/button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/locationSwitch" />

    <Button
        android:id="@+id/settings_back"
        android:layout_width="185dp"
        android:layout_height="71dp"
        android:layout_marginStart="113dp"
        android:layout_marginEnd="113dp"
        android:layout_marginBottom="87dp"
        android:text="@string/back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />
</androidx.constraintlayout.widget.ConstraintLayout>